@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,16 +23,15 @@
 
 package lookup;
 
-import jdk.incubator.foreign.*;
+import java.lang.foreign.Addressable;
+import java.lang.foreign.SymbolLookup;
 
 public class Lookup {
     static {
         System.loadLibrary("Foo");
     }
 
-    static SymbolLookup lookup = SymbolLookup.loaderLookup();
-
-    public static NativeSymbol fooSymbol() {
-        return lookup.lookup("foo").get();
+    public static Addressable fooSymbol() {
+        return SymbolLookup.loaderLookup().lookup("foo").get();
     }
 }
